productions/agentkit-cli/archives/0.52.4/en/commands/release.mdx
---
title: "Release"
zh_link: "/productions/agentkit-cli/archives/0.52.4/zh/commands/release"
---

`release` runs the full `.agentkit/agentkit.yaml` release pipeline: scaffold release config, build the image in the cloud, create or update the AgentKit Runtime, and optionally release Feishu, WeCom, DingTalk proxies or a frontend BFF. If you use the root `agentkit.yaml` lifecycle config, use [`launch`](/productions/agentkit-cli/preview/en/commands/launch) instead.

## release

Without a subcommand, `release` runs the full pipeline. If `.agentkit/agentkit.yaml` is missing, it first generates the config and asks you to review it before running the command again.

| Flag / Argument | Description | Default |
| --- | --- | --- |
| `-n, --name <name>` | Runtime or app name used during config. | Current directory name |
| `-r, --region <region>` | Cloud region used during config. | Provider default region |
| `-p, --project <name>` | AgentKit project. | `default` |
| `--im-feishu` | Release a Feishu bot proxy after the runtime release. | `false` |
| `--im-feishu-app-id <id>` | Feishu App ID for the proxy. | `im.feishu.app_id` or `FEISHU_APP_ID` |
| `--im-feishu-app-secret <secret>` | Feishu App Secret for the proxy; prefer `FEISHU_APP_SECRET`. | `im.feishu.app_secret` or `FEISHU_APP_SECRET` |
| `--json` | Emit machine-readable NDJSON events for a managed Harness Sidecar release. | `false` |

```bash lines
agentkit release --name my-agent --region cn-beijing --project default
```

<Warning>
`release` creates or updates cloud runtimes and may create VeFaaS functions, gateways, container registry resources, TOS objects, and identity configuration. Confirm `.agentkit/agentkit.yaml`, credentials, region, and project before running it.
</Warning>

`--json` is only for managed Sidecar releases where `.agentkit/agentkit.yaml` resolves a `harness_sidecar` configuration. Using this flag with a standard release configuration returns a failure result. Output is newline-delimited JSON with `progress`, `runtime`, and terminal `result` events, so Studio or CI can render build, deploy, and publish status by phase.

```bash lines
agentkit release --json
```

## release config

Generate `.agentkit/agentkit.yaml` and a Dockerfile.

| Flag / Argument | Description | Default |
| --- | --- | --- |
| `-n, --name <name>` | Runtime or app name. | Current directory name |
| `-r, --region <region>` | Cloud region. | Provider default region |
| `-p, --project <name>` | AgentKit project. | `default` |
| `-f, --force` | Overwrite existing generated files. | `false` |

```bash lines
agentkit release config --name my-agent --force
```

## release build

Build the image in the cloud from `.agentkit/agentkit.yaml` and write build artifacts under `.agentkit/artifacts/`.

When managed Harness Sidecar is enabled, the build stage installs application dependencies on top of the platform-managed base image. `agentkit_sdk_python` entries in `requirements.txt` are preserved with the application so you can select an explicit public SDK version; `veadk-python` and the retired standalone `agentkit-harness-sidecar-integration` package are removed from the build context to avoid conflicting with the VeADK source provided by the managed base image. The build verifies the public VeADK source and `agentkit-sdk-python` version boundary in the managed base image.

Managed Sidecar builds must use the current `.agentkit/Dockerfile` generated by the CLI. If the project uses a user-owned root `Dockerfile`, or an older `.agentkit/Dockerfile` no longer matches the current managed build structure, `release build` fails before the cloud build starts. Run `agentkit release config --force` to generate the current template, and preserve any Dockerfile changes you maintain manually before replacing the file.

Cloud builds upload the build context to TOS before starting Code Pipeline. The CLI sizes the upload timeout from the compressed archive size, with a minimum of 120 seconds and a maximum of 10 minutes, and automatically retries once after retryable network errors such as connection resets, transient DNS failures, or upload timeouts. Managed Sidecar builds also retry one transient TOS bucket-read failure and use a dedicated cache-enabled Code Pipeline; that pipeline is isolated by the managed base image digest so it does not share cache with ordinary no-cache builds or builds that use another base image.

| Flag / Argument | Description | Default |
| --- | --- | --- |
| _(no options)_ | This subcommand takes no options. | — |

```bash lines
agentkit release build
```

## release apply

Create or update the runtime from the latest built artifact.

For managed Harness Sidecar releases, `release apply` waits for the `key_auth` APIG binding after the runtime reaches `Ready`, then runs the Sidecar, model proxy, and MCP gateway checks. If the release API response is ambiguous but the runtime is already releasing or the new version is ready, the CLI continues from the observed runtime state instead of triggering the release again.

When an existing Sidecar runtime is in `Error`, but the current version is still the only serving `Ready` version and every newer version has failed, the CLI preserves the current serving version and updates in place to a new version. If a newer non-failed version exists, more than one serving instance is present, or the recovery conditions cannot be confirmed, the command fails and requires explicit runtime reconciliation first.

| Flag / Argument | Description | Default |
| --- | --- | --- |
| _(no options)_ | This subcommand takes no options. | — |

```bash lines
agentkit release apply
```

IM channel and frontend release settings still live in `.agentkit/agentkit.yaml`; see [agentkit.yaml](/productions/agentkit-cli/preview/en/agentkit-yaml) for field details.
